packages/kit/test/apps/basics/src/routes/errors/page-endpoint/post-implicit/+page.server.js
import { FancyError } from '../_shared.js';

/** @type {import('./$types').Actions} */
export const actions = {
	default: () => {
		throw new FancyError('oops');
	}
};
